<resources>
    <string name="app_name">ATMEmpresaConsultoria</string>
    <string name="sobreEmpresa">Sobre a Empresa</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mollis ex nec quam euismod pharetra. Donec dignissim diam arcu, quis vestibulum orci vestibulum eu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pellentesque blandit dignissim. Nulla ac nisl mauris. Donec ut velit sit amet dolor efficitur iaculis nec vitae orci. Praesent ac ante tortor. Donec vel erat pharetra, commodo mi ac, aliquet risus. Duis tincidunt velit augue, eget suscipit urna tincidunt nec. Ut sed mattis est, quis porta orci. Ut quis neque quis metus iaculis ultricies id id tortor. Fusce ornare lorem vel purus commodo, at tempor neque scelerisque. Sed in lacus elit. Vestibulum massa justo, porttitor a semper nec, gravida a risus. Sed id augue at massa placerat mollis et in enim. Proin mauris magna, facilisis ut rhoncus efficitur, aliquet sit amet tortor. Aliquam sed ultrices ex, a elementum nulla. Sed pharetra tortor turpis, sit amet molestie lacus vehicula a. Curabitur tincidunt risus posuere massa tristique dignissim. Quisque turpis mauris, scelerisque at erat id, condimentum commodo odio. Proin tincidunt efficitur tortor, eu accumsan risus congue at. Aliquam sed tincidunt dolor, id tempor urna. Nullam maximus lorem vel ipsum tempor, quis luctus massa congue. Curabitur lobortis lorem a ullamcorper pharetra. Nam ac ipsum ac orci consequat bibendum. Fusce accumsan cursus ipsum, ut dictum mi vestibulum sed. Aliquam feugiat sapien nisl, in ullamcorper nibh consequat in. Sed accumsan iaculis consequat. Nulla lacinia diam sed molestie finibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque tincidunt purus maximus, ullamcorper magna id, lacinia ante. Etiam tincidunt nec ex sed scelerisque. Morbi sed mauris vel nisi cursus bibendum. Pellentesque non nisl gravida, venenatis justo vitae, laoreet urna. Aenean scelerisque urna vel sodales tincidunt. Fusce bibendum at ex sed consectetur. Cras fringilla pulvinar eros ac condimentum. Aliquam interdum faucibus justo, sed laoreet lorem luctus non. Nulla sit amet nunc turpis. Quisque pellentesque sollicitudin cursus. Phasellus orci leo, egestas quis arcu in, eleifend facilisis massa. Pellentesque et vehicula sapien. Nam urna arcu, porta eget molestie et, feugiat vel felis. Sed vel est suscipit, ultrices libero ac, cursus nulla. Nulla ante metus, viverra quis nunc in, lobortis dignissim metus. Donec non lorem dolor. Pellentesque auctor lacus ut vestibulum viverra. Sed in fringilla leo. Integer fermentum ipsum vitae lorem eleifend, ac auctor leo finibus. Quisque ante elit, ornare eu erat at, gravida rutrum enim. Ut elementum interdum dui id varius.</string>
    <string name="servicos">Serviços</string>
    <string name="consultoria">Consultoria</string>
    <string name="processos">Processos</string>
    <string name="acompanhamento">Acompanhamento e Projetos</string>
    <string name="nossosClientes">Nossos Clientes</string>
    <string name="contato">Contato</string>
    <string name="email">E-mail: consultoria@atm.com.br</string>
    <string name="telefone">Telefone: (11) 3333-2222</string>
    <string name="celular">Celular (11) 9999-8888</string>
</resources>
